syntax = "proto3";
package cross.core.auth;

import "gogoproto/gogo.proto";
import "cross/core/account/types.proto";

option go_package = "github.com/datachainlab/cross/x/core/auth/types";
option (gogoproto.goproto_getters_all) = false;

message TxAuthState {
  option (gogoproto.equal) = false;

  repeated cross.core.account.Account remaining_signers = 1 [(gogoproto.nullable) = false];
}
